test: also mock a concrete class and scope the experimental-mode assertion
Co-Authored-By: Ahmad Raza <ahmad.raza@cognition.ai>